force-app/main/default/objects/Account/fields/Primary_Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service_Category__c</fullName>
    <label>Primary Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetName>Service_Category</valueSetName>
    </valueSet>
</CustomField>